# dbt_cursos

./: README.md  pyproject.toml
Doctoralia/: README.md  pyproject.toml
Doctoralia/doctoralia/: README.md  dbt_project.yml
Doctoralia/doctoralia/models/bronze/: stg_doutores.sql
Doctoralia/doctoralia/models/gold/: doutores_ativos.sql
Doctoralia/doctoralia/models/silver/: doutores_sp.sql
Doctoralia/doctoralia/src/: check.py  consutar.py  importar_csv.py
Project_1/: .gitignore  docker-compose.yml
Project_1/dags/: docker-dbt-snowflake.py
Project_1/src/dbt/: dbt_project.yml  profiles.yml
Project_1/src/dbt/seeds/: tb_developer.csv
Project_2/: pyproject.toml
Project_2/estudos/: README.md  dbt_project.yml  dev.duckdb
Project_2/estudos/models/: meu_modelo.sql
Project_2/estudos/src/: consultar.py
