[project]
name = "doctoralia"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Moreira",email = "rafaelmoreiracvo@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dbt-core (>=1.10.2,<2.0.0)",
    "dbt-duckdb (>=1.9.4,<2.0.0)",
    "duckdb (>=1.3.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
